pulldown-cmark-mdcat/tests/snapshots/render/dumb@commonmark-spec-278-list_items.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 122
expression: "render_to_string(markdown_file, &dumb_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/278-list_items.md
---
• foo
• 
  ────────────────────
  bar
  ────────────────────

• 
  ────────────────────
  baz
  ────────────────────
